--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,26 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+.idea 
+node_modules/ 
+.eslintcache 
+ 
+# Logs 
+logs 
+*.log 
+npm-debug.log* 
+ 
+# Dependency directories 
+node_modules/ 
+ 
+# Optional npm cache directory 
+.npm 
+ 
+# Optional eslint cache 
+.eslintcache 
+ 
+# Optional REPL history 
+.node_repl_history 
+ 
+# Stores VSCode versions used for testing VSCode extensions 
+.vscode-test
