--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "eslint": "^8.9.0",
+    "prettier": "2.5.1",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
   }
